--- a/freddyapp/templates/freddyapp/confirm_delete.html
+++ b/freddyapp/templates/freddyapp/confirm_delete.html
@@ -5,5 +5,6 @@
     <form method="post">
         {% csrf_token %}
         <button type="submit">Yes</button>
-        <a href="{% url 'freddyapp:list' %}">Cancel</a> </form>
+        <a href="{% url 'freddyapp:list' %}">Cancel</a>
+    </form>
 {% endblock %}
