--- a/freddyapp/templates/freddyapp/detail.html
+++ b/freddyapp/templates/freddyapp/detail.html
@@ -14,4 +14,7 @@
             {% endfor %}
         </ul>
     {% endif %}
+    
+    <br>
+    <a href="{% url 'freddyapp:list' %}">Back to list</a>
 {% endblock %}
