--- a/freddyapp/templates/freddyapp/form.html
+++ b/freddyapp/templates/freddyapp/form.html
@@ -6,5 +6,6 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Send</button>
+        <a href="{% url 'freddyapp:list' %}">Cancel</a>
     </form>
 {% endblock %}
